Change area definitions for chlorophyll a product. Extend to the entire Arctic

--- a/PanArctic_DSL_figures.Rmd
+++ b/PanArctic_DSL_figures.Rmd
@@ -111,7 +111,13 @@ trawl_latlon <- trawl_station %>% # Location of trawls
 
 # Remote sensing data
 load(paste0("data/remote_sensing/physics_grids_", cell_res, "km.RData"))
+phy_grid_laea_150 <- phy_grid_laea
+load(paste0("data/remote_sensing/physics_grids_", "25", "km.RData"))
+phy_grid_laea_hd <- phy_grid_laea
 load(paste0("data/remote_sensing/chl_grids_", cell_res, "km.RData"))
+chl_grid_laea_150 <- chl_grid_laea
+load(paste0("data/remote_sensing/chl_grids_", "25", "km.RData"))
+chl_grid_laea_hd <- chl_grid_laea
 
 # Statistics
 load("data/statistics/LM_results.RData")
@@ -1250,6 +1256,96 @@ HGAM
 ```
 
 # Supplementary data
+
+
+## Figure SX Map chlorophyll a and current velocity
+
+```{r map-chla-velo}
+# Map chlorophyll a
+map_chla <- chl_grid_laea_50 %>%
+  ggplot() +
+  # # Bathymetry
+  # geom_raster(data = bathy_laea, aes(x = xc, y = yc, fill = depth_d),
+  #             alpha = 0.8) + 
+  # scale_fill_grey("Depth (m)", start = 0.9, end = 0.3) +
+  # guides(fill = "none") + 
+  # new_scale_fill() + 
+  # Chlorophyll a
+  geom_tile(aes(x = xc, y = yc, fill = chl)) + 
+  # scale_fill_viridis_c(expression("Chl a (mg m"^-3*")"),
+  #                      option = "viridis", limits = c(0, 2.5), 
+  #                      na.value = "#FDE725FF") +
+  scale_fill_cmocean(expression("Chl a (mg m"^-3*")"),
+                       name = "algae", limits = c(0, 2.5), 
+                       na.value = "#122414FF") +
+  # Coastlines
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), 
+               fill = "grey25") + 
+  coord_fixed(xlim = c(-2450, 1000), ylim = c(-1500, 1850), expand = F) +
+  # Coords 
+  geom_tile(data = SA_grid_laea, aes(x = xc, y = yc), fill = NA,
+            colour = "red", size = 0.5) + 
+  # North Pole
+  geom_point(aes(x = 0, y = 0), size = 0.05) +
+  # Facets
+  facet_wrap(~ year) + 
+  # Legend over 2 rows
+  theme(#legend.position = "right", 
+        # legend.title = element_text(vjust = 1),
+        # legend.key.height = unit(0.1, "in"),
+        legend.key.width = unit(0.1, "in"),
+        axis.text = element_blank(),
+        axis.ticks = element_blank(),
+        axis.title = element_blank())
+
+# Map current velocity
+map_velo <- phy_grid_laea_50 %>%
+  filter(depth == 318) %>%
+  ggplot() +
+  # Bathymetry
+  # geom_raster(data = bathy_laea, aes(x = xc, y = yc, fill = depth_d),
+  #             alpha = 0.8) + 
+  # scale_fill_grey("Depth (m)", start = 0.9, end = 0.3) +
+  # guides(fill = "none") + 
+  # new_scale_fill() + 
+  # Chlorophyll a
+  geom_tile(aes(x = xc, y = yc, fill = velocity * 100)) + 
+  scale_fill_cmocean(expression("Velocity (cm s"^-1*")"),
+                       name = "speed", limits = c(0, 4.5), 
+                       na.value = "#172313FF") +
+  # Coastlines
+  geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group), 
+               fill = "grey25") + 
+  coord_fixed(xlim = c(-2450, 1000), ylim = c(-1500, 1850), expand = F) +
+  # North Pole
+  geom_point(aes(x = 0, y = 0), size = 0.05) +
+  # Coords 
+  geom_tile(data = SA_grid_laea, aes(x = xc, y = yc), fill = NA,
+            colour = "red", size = 0.5) + 
+  # Facets
+  facet_wrap(~ year) + 
+  # Legend over 2 rows
+  theme(#legend.position = "right", 
+        # legend.title = element_text(vjust = 1),
+        # legend.key.height = unit(0.1, "in"),
+        legend.key.width = unit(0.1, "in"),
+        axis.text = element_blank(),
+        axis.ticks = element_blank(),
+        axis.title = element_blank())
+
+# Combine plots
+map_env <- plot_grid(map_chla, map_velo, ncol = 1, align = "hv", axis = "tblr",
+                     labels = "auto", label_size = 9)
+# Save and display plot
+ggsave("plots/Figure_map_chla.png", map_chla, 
+       height = 2.5, width = 6.5, dpi = 600, units = "in")
+ggsave("plots/Figure_map_velo.png", map_velo, 
+       height = 2.5, width = 6.5, dpi = 600, units = "in")
+ggsave("plots/Figure_map_chl_velo.png", map_env, 
+       height = 5, width = 6.5, dpi = 600, units = "in")
+```
+
+
 
 ## OLD Figure 3. Map of mesopelagic backscatter hotspots
 
