--- a/PanArctic_DSL_download_CMEMS.ipynb
+++ b/PanArctic_DSL_download_CMEMS.ipynb
@@ -95,9 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,15 +420,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Area definition\n",
-    "lon_min = -151\n",
-    "lon_max = 34\n",
+    "lon_min = -179.95\n",
+    "lon_max = 179.95\n",
     "lat_min = 66.5\n",
-    "lat_max = 84\n",
+    "lat_max = 85\n",
     "\n",
     "# Date definitions\n",
     "date_start = dt.datetime(2015, 1, 1, 0, 0, 0)\n",
@@ -445,11 +445,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "OUTPUT_DIRECTORY = 'data/remote_sensing/ocean_colour_OCEANCOLOUR_ARC_CHL_L4_REP_OBSERVATIONS_009_088/nc'"
+    "OUTPUT_DIRECTORY = 'data/remote_sensing/ocean_colour/nc'"
    ]
   },
   {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -482,31 +482,7 @@
       "Downloading chl 2015-10-01\n",
       "Downloading chl 2015-11-01\n",
       "Downloading chl 2015-12-01\n",
-      "Downloading chl 2016-01-01\n",
-      "Downloading chl 2016-02-01\n",
-      "Downloading chl 2016-03-01\n",
-      "Downloading chl 2016-04-01\n",
-      "Downloading chl 2016-05-01\n",
-      "Downloading chl 2016-06-01\n",
-      "Downloading chl 2016-07-01\n",
-      "Downloading chl 2016-08-01\n",
-      "Downloading chl 2016-09-01\n",
-      "Downloading chl 2016-10-01\n",
-      "Downloading chl 2016-11-01\n",
-      "Downloading chl 2016-12-01\n",
-      "Downloading chl 2017-01-01\n",
-      "Downloading chl 2017-02-01\n",
-      "Downloading chl 2017-03-01\n",
-      "Downloading chl 2017-04-01\n",
-      "Downloading chl 2017-05-01\n",
-      "Downloading chl 2017-06-01\n",
-      "Downloading chl 2017-07-01\n",
-      "Downloading chl 2017-08-01\n",
-      "Downloading chl 2017-09-01\n",
-      "Downloading chl 2017-10-01\n",
-      "Downloading chl 2017-11-01\n",
-      "Downloading chl 2017-12-01\n",
-      "Download finished.\n"
+      "Downloading chl 2016-01-01\n"
      ]
     }
    ],
@@ -534,11 +510,18 @@
     "    if date == daterange[-1]:\n",
     "        print(\"Download finished.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -552,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
