--- a/PanArctic_DSL_download_CMEMS.ipynb
+++ b/PanArctic_DSL_download_CMEMS.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,18 +420,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Area definition\n",
-    "lon_min = -151\n",
-    "lon_max = 34\n",
+    "lon_min = -179.95\n",
+    "lon_max = 179.95\n",
     "lat_min = 66.5\n",
-    "lat_max = 84\n",
+    "lat_max = 85\n",
     "\n",
     "# Date definitions\n",
-    "date_start = dt.datetime(2015, 1, 1, 0, 0, 0)\n",
+    "date_start = dt.datetime(2016, 1, 1, 0, 0, 0)\n",
     "date_end = dt.datetime(2017, 12, 1, 0, 0, 0)\n",
     "daterange = pd.date_range(date_start, date_end, freq = \"MS\")"
    ]
@@ -445,11 +445,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "OUTPUT_DIRECTORY = 'data/remote_sensing/ocean_colour_OCEANCOLOUR_ARC_CHL_L4_REP_OBSERVATIONS_009_088/nc'"
+    "OUTPUT_DIRECTORY = 'data/remote_sensing/ocean_colour/nc'"
    ]
   },
   {
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -470,18 +470,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading chl 2015-01-01\n",
-      "Downloading chl 2015-02-01\n",
-      "Downloading chl 2015-03-01\n",
-      "Downloading chl 2015-04-01\n",
-      "Downloading chl 2015-05-01\n",
-      "Downloading chl 2015-06-01\n",
-      "Downloading chl 2015-07-01\n",
-      "Downloading chl 2015-08-01\n",
-      "Downloading chl 2015-09-01\n",
-      "Downloading chl 2015-10-01\n",
-      "Downloading chl 2015-11-01\n",
-      "Downloading chl 2015-12-01\n",
       "Downloading chl 2016-01-01\n",
       "Downloading chl 2016-02-01\n",
       "Downloading chl 2016-03-01\n",
@@ -534,11 +522,18 @@
     "    if date == daterange[-1]:\n",
     "        print(\"Download finished.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -552,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
