--- a/PanArctic_DSL_remote_sensing.Rmd
+++ b/PanArctic_DSL_remote_sensing.Rmd
@@ -44,7 +44,7 @@ options(dplyr.summarise.inform = F)
 
 ```{r laea-projection}
 # Laea projection
-cell_res <- 100
+cell_res <- 150
 arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931")
 projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea))
 res(arctic_laea) <- c(cell_res, cell_res)
@@ -446,7 +446,7 @@ plot(test_sf4["vxo"], axes = TRUE)
 rm(test_ice, test_meta, test_oce, test_sf, test_sf2, test_sf3, test_sf4, test)
 ```
 
-## Batch processing
+## Load NetCDF
 
 Batch processing of Arctic Ocean Physics Reanalysis data. For convenience, all NetCDF data is combined per year and saved as csv. Since I downloaded physics data in two batches—0, 222, 380, 644, 1062 m depth and 266 and 318 m depth, I split the tidying into two chunks.
 
@@ -545,7 +545,9 @@ for (y in seq(2015, 2017, 1)) {
 rm(phy_coord_tmp, phy_ice_tmp, phy_oce_tmp, phy_tmp, phy_year)
 ```
 
-Tidy csv data and calculate current velocity and angle. I also calculate the annual average of each variable. The annual average dataset will be used for comparison with acoustic data.
+## Tidy monthly average data
+
+Tidy csv data and calculate current velocity and angle. 
 
 ```{r physics-tidy, message=FALSE}
 # List files
@@ -557,17 +559,8 @@ phy_year <- list.files("data/remote_sensing/physics",
   lazy_dt() %>%
   mutate(year = year(date),
          month = month(date),
-         # Current velocity
-         velocity = sqrt(vxo ^ 2 + vyo ^ 2), 
-         # Current direction
-         v_angle = atan(vyo / vxo) * (180 / pi)) %>% 
-  arrange(year, date, depth) %>%
-  dplyr::select(- date, - month) %>%
-  # Group by cell by year by depth
-  group_by(year, x, y, depth) %>% 
-  # Calculate annual average for each variable
-  summarise_all(mean) %>% 
-  ungroup() %>%
+         velocity = sqrt(vxo ^ 2 + vyo ^ 2)) %>% 
+  dplyr::select(-date) %>%
   as_tibble()
 ```
 
@@ -575,7 +568,7 @@ Plot average current velocity in 2015 in Svalbard at 318 m depth.
 
 ```{r plot-current}
 phy_year %>%
-  filter(year == 2015 & depth == 318 & between(x, 7, 15) & between(y, -10, -6)) %>%
+  filter(year == 2015 & month == 8 & depth == 318 & between(x, 7, 15) & between(y, -10, -6)) %>%
   ggplot() +
   geom_raster(aes(x = x, y = y, fill = velocity)) + 
   geom_vector(aes(x = x, y = y, dx = vxo, dy = vyo, mag = velocity),
@@ -585,13 +578,13 @@ phy_year %>%
   coord_cartesian()
 ```
 
-### EPSG:6931 - EASE-Grid 2.0 North (Lambert's equal-area, azimuthal)
+## Projection to EPSG:6931
 
-Data is projected on the EPSG:6931 projection. I also calculate temperature (x - mean(x over the whole time series) and current anomalies.
+Data is projected on the EPSG:6931 projection and the median value is extracted.
 
-```{r EPSG-6931-physics-grid}
+```{r EPSG-6931-physics-grid-median}
 # Projection, cell resolution in km
-cell_res <- 100
+cell_res <- 150
 arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") 
 projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) 
 res(arctic_laea) <- c(cell_res, cell_res)
@@ -601,57 +594,66 @@ phy_grid_laea <- data.frame()
 
 # Loop through each year
 for (i in seq(2015, 2017, 1)) {
-  # Loop through each depth bin
-  for (j in c(0, 222, 266, 318, 380, 644, 1062)) { 
-    phy_year_tmp <- phy_year %>%
-      # Select depth bin
-      filter(year == i & depth == j) 
-    # Rasterize data in laea
-    phy_tmp_laea <- SpatialPointsDataFrame(
-      SpatialPoints(cbind(phy_year_tmp$lon, phy_year_tmp$lat),
-                    proj4string = CRS("EPSG:4326")), 
-      data.frame(lat = phy_year_tmp$lat,
-                 lon = phy_year_tmp$lon,
-                 depth = phy_year_tmp$depth,
-                 mlotst = phy_year_tmp$mlotst,
-                 siconc = phy_year_tmp$siconc,
-                 sithick = phy_year_tmp$sithick,
-                 thetao = phy_year_tmp$thetao,
-                 so = phy_year_tmp$so,
-                 velocity = phy_year_tmp$velocity,
-                 vxo = phy_year_tmp$vxo,
-                 vyo = phy_year_tmp$vyo)) %>%
-      # Change projection to EPSG:6931
-      spTransform(., CRSobj = crs(arctic_laea)) %>% 
-      # Rasterize 
-      rasterize(., arctic_laea, fun = mean, na.rm = T) %>% 
-      # Remove ID layer
-      dropLayer(1) %>% 
-      # Convert raster to data frame
-      rasterToPoints() %>% 
-      as.data.frame() %>%
-      # Rename variables
-      rename(xc = x, yc = y) %>% 
-      mutate(year = i, 
-             depth = j,
-             area = factor(
-               case_when(lon > -155 & lon <= -95 & lat > 65 & lat <= 82 ~ "BF_CAA",
-                         lon > -95 & lon <= -50 & lat > 66 & lat <= 82 ~ "BB",
-                         lon >= -25 & lon <= 145 & lat > 77 & lat <= 90 ~ "SV"),
-               levels = c("BF_CAA", "BB", "SV"))) %>%
-      dplyr::select(year, area, lat, lon, xc, yc, depth, mlotst, siconc, sithick,
-                    thetao, so, velocity, vxo, vyo) 
-    # Combine data
-    phy_grid_laea <- bind_rows(phy_grid_laea, phy_tmp_laea)
+  # Loop through each month
+  for (j in seq(1, 12, 1)) {
+    # Loop through each depth bin
+    for (k in c(0, 222, 266, 318, 380, 644, 1062)) { 
+      phy_year_tmp <- phy_year %>%
+        # Select depth bin
+        filter(year == i & month == j & depth == k) 
+      # Rasterize data in laea
+      phy_tmp_laea <- SpatialPointsDataFrame(
+        SpatialPoints(cbind(phy_year_tmp$lon, phy_year_tmp$lat),
+                      proj4string = CRS("EPSG:4326")), 
+        data.frame(lat = phy_year_tmp$lat,
+                   lon = phy_year_tmp$lon,
+                   depth = phy_year_tmp$depth,
+                   thetao = phy_year_tmp$thetao,
+                   velocity = phy_year_tmp$velocity)) %>%
+        # Change projection to EPSG:6931
+        spTransform(., CRSobj = crs(arctic_laea)) %>% 
+        # Rasterize 
+        rasterize(., arctic_laea, fun = median, na.rm = T) %>% 
+        # Remove ID layer
+        dropLayer(1) %>% 
+        # Convert raster to data frame
+        rasterToPoints() %>% 
+        as.data.frame() %>%
+        # Rename variables
+        rename(xc = x, yc = y) %>% 
+        mutate(year = i, 
+               month = j,
+               depth = k,
+               area = factor(
+                 case_when(lon > -155 & lon <= -95 & lat > 65 & lat <= 82 ~ "BF_CAA",
+                           lon > -95 & lon <= -50 & lat > 66 & lat <= 82 ~ "BB",
+                           lon >= -25 & lon <= 145 & lat > 77 & lat <= 90 ~ "SV"),
+                 levels = c("BF_CAA", "BB", "SV"))) %>%
+        dplyr::select(year, month, area, lat, lon, xc, yc, depth, thetao, 
+                      velocity) 
+      # Combine data
+      phy_grid_laea <- bind_rows(phy_grid_laea, phy_tmp_laea)
+    }
   }
 }
-
-# Add cell resolution
-phy_grid_laea <- phy_grid_laea %>%
-  mutate(cell_res = cell_res)
-
 # Remove temporary data
 rm(phy_year_tmp, phy_tmp_laea, i, j) 
+```
+
+## Annual average 
+
+Calculate annual average and median
+
+```{r tidy-phy-grid-laea}
+# Add cell resolution anc calculate annual average
+phy_grid_laea <- phy_grid_laea %>%
+  mutate(cell_res = cell_res) %>% 
+  group_by(year, area, depth, xc, yc, cell_res, lat, lon) %>%
+  summarise(v_mean = mean(velocity),
+            v_median = median(velocity),
+            thetao_mean = mean(thetao),
+            thetao_median = median(thetao)) %>% 
+  ungroup()
 ```
 
 Gridding worked correctly, the following plot shows current velocity at all depth levels.
@@ -666,7 +668,7 @@ coast_10m_laea <- readOGR("data/bathy/ne_10m_land.shp", verbose = F) %>%
 
 phy_grid_laea %>% 
   ggplot() +
-  geom_tile(aes(x = xc, y = yc, fill = velocity * 100)) +
+  geom_tile(aes(x = xc, y = yc, fill = v_mean * 100)) +
   scale_fill_cmocean("Current velocity (cm/s)", name = "speed") +
   geom_polygon(data = coast_10m_laea, aes(x = xc, y = yc, group = group),
                fill = "grey80") +
@@ -684,11 +686,11 @@ phy_grid_laea %>%
 
 Data downloaded from Copernicus Marine. The ocean colour data comes from the [OCEANCOLOUR_ARC_CHL_L4_REP_OBSERVATIONS_009_088](https://resources.marine.copernicus.eu/product-detail/OCEANCOLOUR_ARC_CHL_L4_REP_OBSERVATIONS_009_088/INFORMATION) dataset. Data is monthly averaged and has a cell resolution of 1 x 1 km on a WGS 84 / Plate Carree (EPSG:32662) projection.
 
-I load the data and project it on the arctic laea grid (EPSG:6931 25 x 25 km). The time variable is seconds since 1970-01-01 00:00:00.
+I load the data and project it on the arctic laea grid (EPSG:6931 `r cell_res` x `r cell_res` km) and calculate median chl a. The time variable is seconds since 1970-01-01 00:00:00.
 
 ```{r chl-to-csv, cache=TRUE}
 # Sea ice projection
-cell_res <- 100
+cell_res <- 150
 arctic_laea <- raster(extent(-2700, 2700, -2700, 2700), crs = "EPSG:6931") 
 projection(arctic_laea) <- gsub("units=m", "units=km", projection(arctic_laea)) 
 res(arctic_laea) <- c(cell_res, cell_res)
@@ -720,7 +722,7 @@ for (i in file_list) {
       # Project to EPSG:6931
       spTransform(., CRSobj = crs(arctic_laea)) %>% 
       # Rasterize on the arctic_laea grid (with correct grid resolution)
-      rasterize(., arctic_laea, fun = mean, na.rm = T) %>% 
+      rasterize(., arctic_laea, fun = median, na.rm = T) %>% 
       # Remove ID layer
       dropLayer(1) %>% 
       # Convert raster to data frame
@@ -766,7 +768,8 @@ chl_grid_laea <- list.files("data/remote_sensing/ocean_colour",
               lon >= -25 & lon <= 145 & lat > 77 & lat <= 90 ~ "SV"),
     levels = c("BF_CAA", "BB", "SV"))) %>%
   group_by(year, area, xc, yc, cell_res) %>%
-  summarise(chl = mean(chl)) %>%
+  summarise(chl_mean = mean(chl), 
+            chl_median = median(chl)) %>%
   ungroup()
 ```
 
